--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration) FreshMvvm
+- script: dotnet build --configuration $(buildConfiguration) src/FreshMvvm
   displayName: 'dotnet build $(buildConfiguration)'
