--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,13 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  pathtoPublish: ''
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration) src/FreshMvvm
   displayName: 'dotnet build $(buildConfiguration)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: MyBuildOutputs
+
